samples/_failures_safe/1761363434_9508d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e74d95a1.c: In function ‘main’:
./samples/SAFE/__tmp_e74d95a1.c:182:22: error: expected ‘)’ at end of input
  182 |             while ((c
      |                    ~ ^
      |                      )
./samples/SAFE/__tmp_e74d95a1.c:182:13: error: expected declaration or statement at end of input
  182 |             while ((c
      |             ^~~~~
./samples/SAFE/__tmp_e74d95a1.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e74d95a1.c:182:13: error: expected declaration or statement at end of input
